--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -2,34 +2,18 @@
 /* Css Styles                        */
 /*---------------------------------- */
 
-/**
-	Mat - vCard Template
-	Author : Tavonline
-	Copyright 2017
+.slogan p {
+    font-size: 25px;
+    font-style: italic;
+    text-align: right;
+    /*line-height: 20px;*/
+}
 
-/* Table of Content
-==================================================
-	
-	1. Body and Core Css
-	2. Profile Section
-	3. Navigation
-	4. Home Section
-	5. Resume Section
-    6. Portfolio Section
-    7. Blog Section
-    8. Testimonial Section
-    9. Contact Section
-    10. Footer Section
-    11. Realtor Portfolio 
-    12. Photo Gallery Widgets
-    13. Table Widget
-    14. Pricing Widget
-    15. Events Widget
-    16. Discography Widget
-    17. Responsive
-
-/*------------------------ 1 Body and Core Css ------------------------*/		
-
+.slogan .mendeleev {
+    font-size: 15px;
+    float: right;
+    margin-top: 15px;
+}
 
 .portfolio img.item{
     width: 100%;
