--- a/core/static/css/colors/red.back.css
+++ b/core/static/css/colors/red.back.css
@@ -3,25 +3,25 @@
 /*---------------------------------- */
 
 header nav a.home-btn, .estate figure .imgout .price, .site-btn, .timeline li:first-child i, nav ul li a:after, .owl-theme .owl-controls .owl-page span, .skill-list .progress .percentage, ul.profile-information li:first-child:before{
-    background: #3477bb !important;
+    background: #d81300 !important;
 }
 
 header nav ul li a:hover, .events ul li .datenlocation span, .namenprice .price, .cbp-filter-item-active, .portfolio-content p span, #blog-post .blog-sidebar ul.category-list li a:hover, #blog-post .blog-sidebar .popular-posts ul li a .info{
-    color: #3477bb !important;
+    color: #d81300 !important;
 }
 
 .spinner:before{
-    border-top-color: #3477bb;  
+    border-top-color: #d81300;  
 }
 
 ul.profile-information li:before{
-	border-color: #3477bb; 
+	border-color: #d81300; 
 }
 
 /* Hover Color*/
 
 .site-btn:hover, header nav a.home-btn:hover, .section-title span{
-   background-color: #23527c !important;
+   background-color: #ea2c19 !important;
 }
 
 /* Opacity Color*/
@@ -37,11 +37,11 @@ ul.profile-information li:before{
 }
 
 .timeline li:before, ul.profile-information li:before{
-	border-color: #3477bb !important;
+	border-color: #d81300 !important;
 }
 
 .tab.active a, #blog-post .post-list ul li a, #blog-post .post-comment ul li .comment-content a{
-	color: #3477bb;
+	color: #d81300;
 }
 
 
