--- a/core/templates/core/common/header.html
+++ b/core/templates/core/common/header.html
@@ -7,15 +7,19 @@
                     <li class="tab">
                         <a class="home-btn" href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
                     </li>
-                    <li class="tab"><a href="/resume">RESUME</a></li>
-                    <li class="tab"><a href="/portfolio">PORTFOLIO</a></li>
-                    <li class="tab"><a href="/events">EVENTS</a></li>
-                    <li class="tab"><a href="/blog">BLOG</a></li>
-                    <li class="tab"><a href="/contact">CONTACT</a></li>
+                    <li class="tab"><a href="/articles/">Статьи</a></li>
+                    <li class="tab"><a href="/events/">События</a></li>
                 </ul>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-8 dynamic">
-                <a href="mailto:hi@diyanovavalentina@mail.ru" class="pull-right site-btn icon hidden-xs">Написать <i class="fa fa-paper-plane" aria-hidden="true"></i></a>
+
+                
+                {% if request.user.is_authenticated %}
+                    <a href="/profile/" class="pull-right site-btn site-btn-blue icon hidden-xs">{{ request.user.username }} <i class="fas fa-user-circle"></i></a>
+                    {% else %}
+                    <a href="/accounts/login/" class="pull-right site-btn site-btn-blue icon hidden-xs">Войти <i class="fas fa-user-circle"></i></a>
+                {% endif %}
+
                 <div class="hamburger pull-right hidden-lg hidden-md"><i class="fa fa-bars" aria-hidden="true"></i></div>
                 <div class="hidden-md social-icons pull-right">
                     <a class="fb" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
