solve small issues

--- a/core/templates/core/common/profile.html
+++ b/core/templates/core/common/profile.html
@@ -11,13 +11,12 @@
         </figure>
         <ul class="profile-information">
             <li></li>
-            <li><p><span>Имя:</span> Stephanie Hane</p></li>
-            <li><p><span>Д/Р:</span> 06 December 1987</p></li>
-            <li><p><span>Профессия:</span> Musician</p></li>
+            <li><p><span>Имя:</span> Валентина Коровкина</p></li>
+            <li><p><span>Профессия:</span> Преподаватель</p></li>
             <li><p><span>Email:</span> diyanovavalentina@mail.ru</p></li>
         </ul>
-        <div class="col-md-12">
+        <!-- <div class="col-md-12">
             <button class="site-btn icon">Скачать резюме <i class="fa fa-download" aria-hidden="true"></i></button>
-        </div>
+        </div> -->
     </div>
 </div>
