--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -94,5 +94,8 @@
     <script src="{% static "js/owl.carousel.min.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
 
+    {% block scripts %}
+    {% endblock scripts %}
+      
   </body>
 </html>
