--- a/core/templates/core/common/header.html
+++ b/core/templates/core/common/header.html
@@ -9,6 +9,7 @@
                     </li>
                     <li class="tab"><a href="/articles/">Статьи</a></li>
                     <li class="tab"><a href="/events/">События</a></li>
+                    <li class="tab"><a href="/tests/">Тесты</a></li>
                 </ul>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-8 dynamic">
