--- a/tests/templates/tests/detail.html
+++ b/tests/templates/tests/detail.html
@@ -5,7 +5,7 @@
 ================================================== -->
   <div id="home">
     <!-- Text Section -->
-    <div class="row">
+    <!-- <div class="row">
       <section class="about-me col-md-12 padding_30 padbot_45">
         <div class="section-title">
           <h2>{{ test.name }}</h2>
@@ -32,7 +32,7 @@
             <button class="site-btn black icon">отправить<i class="fa fa-chevron-right" aria-hidden="true"></i></button>
         </form>
       </section>
-    </div>
+    </div> -->
     <div id="react"></div>
   </div>
 {% endblock %}
