done without emails and andmin test tables

--- a/profiles/templates/account/login.html
+++ b/profiles/templates/account/login.html
@@ -12,9 +12,10 @@
         
         <div class="section-title">
           <h4>Войти через:</h4>
-          <div class="hidden-md social-icons">
+          <div class="social-icons">
             <a class="vk" href="{% provider_login_url "vk" %}" aria-hidden="true"><i class="fab fa-vk"></i></a>
           </div>
+          
         </div>
       </section>
     </div>
