--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -9,7 +9,7 @@
       <section class="about-me col-md-12 padding_30 padbot_45">
         <i class="fas fa-comments"></i>
         <div class="section-title">
-          <h2>Profile {{ request.user.username }}</h2>
+          <h2>Profile {{ request.user.first_name }} {{ request.user.last_name }}</h2>
         </div>
         <!-- <p class="top_30">Content</p> -->
         <form method="post" action="/accounts/logout/">{% csrf_token %}
